--- a/app/webapp/nginx.conf
+++ b/app/webapp/nginx.conf
@@ -10,6 +10,8 @@ events {
 http {
   include mime.types;
 
+  resolver 127.0.0.11 ipv6=off;
+
   server {
     listen ${{PORT}};
     lua_code_cache ${{CODE_CACHE}};
